--- a/main.css
+++ b/main.css
@@ -50,6 +50,9 @@ body {
 			color: 72FF2E; 
 			font-weight: 30;
 			font-size: 100;
+			display: block;
+   			margin-left: auto;
+    		margin-right: auto;
 			
     		
 		}
